redesign/css/cyclescape.css
/* ... */
.new-discussion div.category.tags {background-color: #eeeeee; border-radius: 25px; padding: 10px;}
.new-discussion div.category.tags p {font-size: 12px; margin-left: 15px;}
.new-discussion div.category.tags input[type="search"] {margin-left: 10px;}
.locationModal img.map {width: 100%;}
.locationModal div.controls {position: absolute; top: 0; right: 0; padding: 20px; width: 300px; border-radius: 25px; background-color: rgba(255, 255, 255, 0.671); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); margin: 5px;}


/* Browse issues */
.browse-issues .map-controls {width: 250px;}
.browse-issues div.controls ul.map-buttons li {padding: 10px 0 10px 0; text-align: center;}
.browse-issues ul.issues {list-style-type: none; margin: 0; padding: 0;}
.browse-issues ul.issues li {display: inline-block; border-radius: 25px; cursor: pointer; margin: 5px 0; width: 45%; transition: .2s;}
.browse-issues ul.issues li:hover {background: #F6F6F6; }
.browse-issues ul.issues li a {display: flex; cursor: pointer; text-align: left; text-decoration: none;}
.browse-issues ul.issues li a div.minimap {flex: 1; padding: 20px 10px;}
.browse-issues ul.issues li a div.issue-content {flex: 5; padding: 10px; align-self: center;}
.browse-issues ul.issues li a div.minimap img {border-radius: 100%; width: 100px; height: 100px;}
.browse-issues ul.issues li a h2 {border: 1px solid #185B3D; border-radius: 25px; padding: 5px 10px;}
.browse-issues ul.issues li a p {color: black;}
.browse-issues a.embed {color: rgb(105, 105, 105); position: absolute; bottom: 0; right: 0; margin-right: 60px; padding: 5px; background-color: #eeeeeee5; -webkit-backdrop-filter: (5px); backdrop-filter: (5px); border-radius: 25px;}


/* Issue */
.issue .title-wrapper textarea {border: none; border-radius: 10px; padding: 2.5px 10px; width: 100%;}
.issue .side-content {width: 250px;}
.issue .side-content img {border-radius: 25px; height: 100%;}
.issue .side-content button {position: fixed; align-self: center; display: block; margin: auto; bottom: 50px;}


/* New issue */
.new-idea #map {height: -webkit-fill-available; border-radius: 25px; z-index: 1;}
.new-idea .map-controls {width: 400px; max-height: calc(100vh - 210px); overflow: scroll; z-index: 2;}
.new-idea form input, .new-idea form textarea {background-color: rgba(255, 255, 255, 0.671); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px);}
.new-idea form input {width: -webkit-fill-available;}
.new-idea form textarea {width: 100%;}
.new-idea form .light {font-size: 12px;}
.new-idea form {overflow: scroll;}
.new-idea .main-content.full-screen.full-map {height: calc(100vh - 190px);}
.modal-content .modal-body button.done {position: relative; display: block; margin: 30px 10px 0;}


/* Library */
ul.library {list-style-type: unstyled; padding-left: 0;}
ul.library a {text-decoration: none;}
ul.library li {display: inline-block; border-radius: 25px; width: 280px; height: 405px; overflow: hidden; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04); transition: .1s; margin: 5px 10px; cursor: pointer;}
ul.library li:hover {box-shadow: 2px 6px 12px -7px rgba(0,0,0,0.75);}
ul.library li img {height: 230px; width: 280px;}
ul.library li img.map {height: 100px;}
ul.library li h2 {margin: 10px 5px; padding: 0 5px; color: black; height: 55px;}
.library input.filter {border: 1px solid #eeeeee; font-size: 20px; padding: 10px 20px; border-radius: 25px; margin: 10px 10px 20px; width: 100%;}
.library div.controls ul.map-buttons li {padding: 10px 0 10px 0; text-align: center;}


/* Profile */
.profile .website-link {margin: 10px;}
.profile .website-link i {margin-right: 5px;}
.profile img.avatar {width: 100px;}
.profile .widget.standalone:not(:first-of-type) {margin-left: 0;}


/* Create account */
.create-account .main-content {border: 1px solid #eeeeee; border-radius: 25px; max-width: 1000px; margin: 50px auto;}
.create-account ul.wizard {width: auto; margin: 0 auto 50px; display: block;}
.create-account div.social-sign-in img {width: 400px; display: block; margin: 20px auto;}
.create-account h3 {color: #AC3E27; font-size: 30px;}
.create-account .form-floating {display: inline-block;}
.create-account form {text-align: center;}
.create-account input {width: 300px; display: inline-block; margin: 10px;}
.create-account button.next {text-align: center; margin: 15px auto; display: block;}
.create-account .ui-autocomplete {width: 200px !important;}


/* Planning applications */
.planning-applications form .radio, form .category {background-color: transparent;}
.planning-applications form .map-controls {max-width: 310px; height: calc(100vh - 255px); overflow: scroll;}
.planning-applications form .category {flex-wrap: wrap;}
.planning-applications form .category .label {padding-right: 10px;}
.planning-applications .widget {margin: 20px 0;}

ul.planning-applications {list-style-type: unstyled; margin: 0; padding: 0;}
ul.planning-applications li {display: flex; border-radius: 25px; overflow: hidden; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04); transition: .1s; margin: 10px 0; cursor: pointer;}
ul.planning-applications li:hover {box-shadow: 2px 6px 12px -7px rgba(0, 0, 0, 0.075);}
ul.planning-applications div.issue-content {padding: 5px 10px;}
ul.planning-applications div.minimap {height: 160px;}
ul.planning-applications li img {height: 250px; width: 300px;}
ul.planning-applications li img.map {height: 100px;}
ul.planning-applications li h2 {margin: 10px 5px; padding: 0; color: black; font-size: 15px;}
ul.planning-applications li p {font-size: 13px; margin: 10px 5px 15px;}
ul.planning-applications li p.uid {font-style: italic;}
ul.planning-applications li a {margin: 5px;}
ul.planning-applications li a.convert {background-color: #185B3D; color: white; padding: 5px 10px; border-radius: 25px; text-decoration: none; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04);}
ul.planning-applications li a.convert:hover {background-color: #39956c;}
/* ... */

